--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
+    "js-cookie": "^3.0.5",
     "nuxt": "^3.12.4",
     "pinia": "^2.1.7",
     "vite-svg-loader": "^5.1.0",
