--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "nuxt": "^3.12.4",
     "pinia": "^2.1.7",
     "vite-svg-loader": "^5.1.0",
-    "vue": "latest"
+    "vue3-carousel": "^0.3.3"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "sass": "^1.77.8"
   }
 }
